--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/Shadowcoderispro/amongus/main/media/huh.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Shadowcoderispro/amongus/main/media/download (4).jpeg">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
